<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:clickable="false"
        android:focusable="false"
        android:theme="@style/CheckBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPriority"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/priority" />

    <TextView
        android:id="@+id/textViewItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/imageViewInformation"
        app:layout_constraintStart_toEndOf="@id/imageViewPriority"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/example_item_text" />

    <ImageView
        android:id="@+id/imageViewInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details"
        android:contentDescription="@string/info" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/textViewItem"
        app:layout_constraintTop_toBottomOf="@+id/textViewItem"
        tools:text="27/01/2022" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

</androidx.constraintlayout.widget.ConstraintLayout>